--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Drawing App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h4>Welcome to Online Drawing App</h4>
+    <canvas id="whiteboard"></canvas>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
